auto-test/tests/chapter_16/valid/extra_credit/promote_switch_cond_2.c



int main(void) {
    char c = -56;
    switch (c) {
        
        
        case 33554632:
            return 1;  
        default:
            return 0;
    }
}