auto-test/tests/chapter_16/invalid_types/assign_to_string_literal.c
int main(void) {
    
    
    "foo" = "bar";
    return 0;
}